# hwp2markdown

./: .coverage  .gitignore  .golangci.yml  .goreleaser.yml  LICENSE  Makefile  README.md  go.mod  go.sum  pyproject.toml
.claude/skills/release/: SKILL.md
.claude/skills/update-hwpx-differences/: SKILL.md
.githooks/: pre-push
.github/workflows/: release.yml  test.yml
cmd/hwp2markdown/: main.go
docs/: PRD.md  existing-solutions-research.md  hwp-format-research.md  hwpx-markdown-differences.md  tech-stack.md  vibe-coding-tutorial.md
internal/cli/: cli_test.go  config.go  convert.go  extract.go  providers.go  root.go
internal/config/: config_test.go
internal/ir/: image.go  ir_test.go  list.go  table.go
internal/llm/anthropic/: anthropic.go
internal/llm/ollama/: ollama.go
internal/llm/openai/: openai.go
internal/parser/hwp5/: constants.go  docinfo.go  header.go  section.go
internal/parser/hwpx/: parser.go
scripts/: install-hooks.sh  pre-commit  pre-push  setup-hooks.sh
src/hwp2markdown/: __init__.py  __main__.py  cli.py
src/hwp2markdown/model/: __init__.py
src/hwp2markdown/parser/: __init__.py
src/hwp2markdown/renderer/: __init__.py
testdata/: expected.md  expected_formatted.md  한글 테스트_stage1.md  한글 테스트_stage2.md  한글 테스트_stage2_gpt.md
tests/: __init__.py  conftest.py  e2e_test.go  integration_test.go  test_cli.py
