[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hwp2markdown"
version = "0.1.0"
description = "HWP(한글 워드프로세서) 문서를 Markdown으로 변환하는 도구"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "roboco-io" }
]
keywords = ["hwp", "hwpx", "markdown", "converter", "hangul"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "olefile>=0.46",
    "lxml>=4.9",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
images = ["Pillow>=9.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pyinstaller>=6.0",
]

[project.scripts]
hwp2markdown = "hwp2markdown.cli:app"

[project.urls]
Homepage = "https://github.com/roboco-io/hwp2markdown"
Repository = "https://github.com/roboco-io/hwp2markdown"
Issues = "https://github.com/roboco-io/hwp2markdown/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hwp2markdown"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP045"]  # Optional[X] vs X | None - typer compatibility

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=hwp2markdown --cov-report=term-missing"
